# rshell

./: .gitignore  CMakeLists.txt  README.md
cryptwrapper/: CMakeLists.txt
cryptwrapper/include/: logger.h  wrapper.h
cryptwrapper/src/: crypt.c  logger.c
rshell/: CMakeLists.txt
rshell/.cache/clangd/index/: main.c.6DB2CD42AC43C322.idx
rshell/include/: misc.h
rshell/src/: main.c  misc.c
rshellserver/: CMakeLists.txt
rshellserver/src/: main.c
